[package]
name = "krunkit"
version = "1.3.1"
authors = ["The krunkit Authors"]
edition = "2021"
description = "CLI tool to start VMs with libkrun"
readme = "README.md"
license = "Apache-2.0"
build = "build.rs"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.0", features = ["derive"] }
mac_address = "1.1.5"
sysinfo = "0.31.4"
log = "0.4.0"
env_logger = "0.11.8"
regex = "1.11.1"
core-foundation = "0.10.1"
objc2-io-kit = "0.3.2"
httparse = "1.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
